Added ipsum lorem text to show off the functionality of the documentation functionality

--- a/index.html
+++ b/index.html
@@ -39,56 +39,59 @@
         <div class="col-12 col-md-3 col-xl-2 bd-sidebar">
           <nav id="navbar">
             <header>
-              <a class="nav-link" href="#one" >one</a>
-              <a class="nav-link" href="#two" >two</a>
-              <a class="nav-link" href="#three" >three</a>
-              <a class="nav-link" href="#four" >four</a>
-              <a class="nav-link" href="#five" >five</a>
+              <a class="nav-link" href="#Introduction">Introduction</a>
+              <a class="nav-link" href="#HTML">HTML</a>
+              <a class="nav-link" href="#CSS">CSS</a>
+              <a class="nav-link" href="#JavaScript">JavaScript</a>
+              <a class="nav-link" href="#Python">Python</a>
             </header>
           </nav>
         </div>
         <!-- PUT IT HERE -->
         <main id="main-doc" class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content" role="main">
           Main Doc Is here!
-          <section id="one" class="main-section">
-            <header>one</header>
-            <p>One - Another paragraph example</p>
+          <section id="Introduction" class="main-section">
+            <header>Introduction</header>
+            <p>Integer vestibulum, metus ullamcorper blandit accumsan, lorem massa efficitur mauris, non venenatis velit lorem sit amet purus. Vestibulum quis consequat eros. Donec at orci eu ante sollicitudin ultrices id a diam. Quisque efficitur augue id ullamcorper finibus. Aenean sit amet turpis at nisl ornare eleifend vestibulum quis magna. Etiam porta enim non est mollis ornare. Donec fermentum augue nunc, quis scelerisque nulla vehicula nec. Duis dignissim mollis lobortis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur justo felis, dictum ac erat pharetra, congue consectetur neque. Mauris eleifend placerat ligula, at commodo sem porttitor eget. Sed congue lacus eget turpis iaculis, sollicitudin posuere nunc bibendum. Ut consectetur dapibus risus, vel luctus urna congue a. Aliquam facilisis suscipit neque, ut dapibus arcu molestie eu.</p>
             <code>function getOuttaHere() { return love; }</code>
-            <p>one point five - Another paragraph example</p>
+            <hr>
+            <p>Nunc eu dolor vitae turpis interdum aliquam eu sed felis. Nam eu scelerisque sapien. Vivamus condimentum turpis at libero imperdiet, sed faucibus tellus ullamcorper. Cras neque diam, porta ut tellus sed, volutpat dictum justo. Aenean porttitor mauris sit amet enim bibendum, at varius lectus scelerisque. Pellentesque finibus at quam pellentesque porta. Pellentesque iaculis at eros nec sagittis. Praesent ultrices viverra finibus. Phasellus varius orci felis, in dignissim risus dignissim et. Curabitur fringilla, velit a pellentesque vestibulum, sapien nulla malesuada libero, id mollis nibh lectus id lacus. Vestibulum eu luctus nulla.</p>
             <code>function getOuttaHere() { return love; }</code>
-            <p>one point six - Another paragraph example</p>
+            <hr>
+            <p>Vestibulum dapibus nisi vel suscipit congue. Curabitur quis elit cursus, convallis orci nec, vulputate nunc. Mauris justo diam, pretium nec odio ac, efficitur fermentum nulla. Nunc et scelerisque enim. Morbi efficitur vestibulum diam vitae placerat. Integer mattis congue libero, vitae gravida lectus molestie et. Donec bibendum hendrerit risus, in feugiat ante tincidunt at. Phasellus dapibus ac nibh non blandit. Phasellus sit amet nulla sollicitudin, luctus arcu vitae, ullamcorper lorem. Nunc ornare metus eget turpis tincidunt, at aliquam nibh molestie. Donec nec elit a lectus tristique fringilla. Pellentesque eu ligula nec diam placerat venenatis ut a nulla. Nam non ex vitae ex vulputate dapibus.</p>
           </section>
-          <section id="two" class="main-section">
-            <header>two</header>
-            <p>two - Another paragraph example</p>
+          <section id="HTML" class="main-section">
+            <header>HTML</header>
+            <p>Vivamus non urna purus. Morbi lorem lectus, laoreet in scelerisque sed, rutrum porttitor velit. Mauris egestas fringilla ligula, at aliquam odio iaculis sit amet. Nulla cursus fringilla tristique. Proin tempus ultrices porttitor. Cras non augue eu nulla volutpat consequat. Etiam ultrices urna nisl, et ultrices eros gravida vitae. Curabitur diam ex, porta vel viverra eu, pharetra vel ipsum. Pellentesque ipsum turpis, interdum et urna in, rutrum bibendum diam. Nam malesuada, quam et tincidunt pulvinar, eros metus molestie mauris, ut pellentesque dolor nisl.</p>
             <code>function getOuttaHere() { return love; }</code>
-            <p>two point five - Another paragraph example</p>
-            <h3>Keeping Going</h3>
+            <p>Integer vestibulum, metus ullamcorper blandit accumsan, lorem massa efficitur mauris, non venenatis velit lorem sit amet purus. Vestibulum quis consequat eros. Donec at orci eu ante sollicitudin ultrices id a diam. Quisque efficitur augue id ullamcorper finibus. Aenean sit amet turpis at nisl ornare eleifend vestibulum quis magna. Etiam porta enim non est mollis ornare. Donec fermentum augue nunc, quis scelerisque nulla vehicula nec. Duis dignissim mollis lobortis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur justo felis, dictum ac erat pharetra, congue consectetur neque. Mauris eleifend placerat ligula, at commodo sem porttitor eget. Sed congue lacus eget turpis iaculis, sollicitudin posuere nunc bibendum. Ut consectetur dapibus risus, vel luctus urna congue a. Aliquam facilisis suscipit neque, ut dapibus arcu molestie eu.</p>
+            <h3>Some important elements</h3>
             <ul>
-              <li>1</li>
-              <li>2</li>
-              <li>3</li>
-              <li>4</li>
-              <li>5</li>
+              <li>Heading Tags - h1, h2, h3</li>
+              <li>In Content - p, pre, code, strong, em</li>
+              <li>Spacing - br, hr</li>
+              <li>Image tags - img</li>
+              <li>Various HTML elements - button, input, select</li>
             </ul>
           </section>
-          <section id="three" class="main-section">
-            <header>three</header>
-            <p>three - Another paragraph example</p>
+          <section id="CSS" class="main-section">
+            <header>CSS</header>
+            <p>Nunc eu dolor vitae turpis interdum aliquam eu sed felis. Nam eu scelerisque sapien. Vivamus condimentum turpis at libero imperdiet, sed faucibus tellus ullamcorper. Cras neque diam, porta ut tellus sed, volutpat dictum justo. Aenean porttitor mauris sit amet enim bibendum, at varius lectus scelerisque. Pellentesque finibus at quam pellentesque porta. Pellentesque iaculis at eros nec sagittis. Praesent ultrices viverra finibus. Phasellus varius orci felis, in dignissim risus dignissim et. Curabitur fringilla, velit a pellentesque vestibulum, sapien nulla malesuada libero, id mollis nibh lectus id lacus. Vestibulum eu luctus nulla.</p>
             <code>function getOuttaHere() { return love; }</code>
-            <p>three point five - Another paragraph example</p>
+            <p>Vestibulum dapibus nisi vel suscipit congue. Curabitur quis elit cursus, convallis orci nec, vulputate nunc. Mauris justo diam, pretium nec odio ac, efficitur fermentum nulla. Nunc et scelerisque enim. Morbi efficitur vestibulum diam vitae placerat. Integer mattis congue libero, vitae gravida lectus molestie et. Donec bibendum hendrerit risus, in feugiat ante tincidunt at. Phasellus dapibus ac nibh non blandit. Phasellus sit amet nulla sollicitudin, luctus arcu vitae, ullamcorper lorem. Nunc ornare metus eget turpis tincidunt, at aliquam nibh molestie. Donec nec elit a lectus tristique fringilla. Pellentesque eu ligula nec diam placerat venenatis ut a nulla. Nam non ex vitae ex vulputate dapibus.</p>
             <code>function getOuttaHere() { return love; }</code>
-            <p>three point six - Another paragraph example</p>
+            <p>Vivamus non urna purus. Morbi lorem lectus, laoreet in scelerisque sed, rutrum porttitor velit. Mauris egestas fringilla ligula, at aliquam odio iaculis sit amet. Nulla cursus fringilla tristique. Proin tempus ultrices porttitor. Cras non augue eu nulla volutpat consequat. Etiam ultrices urna nisl, et ultrices eros gravida vitae. Curabitur diam ex, porta vel viverra eu, pharetra vel ipsum. Pellentesque ipsum turpis, interdum et urna in, rutrum bibendum diam. Nam malesuada, quam et tincidunt pulvinar, eros metus molestie mauris, ut pellentesque dolor nisl.</p>
           </section>
-          <section id="four" class="main-section">
-            <header>four</header>
-            <p>four - Another paragraph example</p>
+          <section id="JavaScript" class="main-section">
+            <header>JavaScript</header>
+            <p>Integer vestibulum, metus ullamcorper blandit accumsan, lorem massa efficitur mauris, non venenatis velit lorem sit amet purus. Vestibulum quis consequat eros. Donec at orci eu ante sollicitudin ultrices id a diam. Quisque efficitur augue id ullamcorper finibus. Aenean sit amet turpis at nisl ornare eleifend vestibulum quis magna. Etiam porta enim non est mollis ornare. Donec fermentum augue nunc, quis scelerisque nulla vehicula nec. Duis dignissim mollis lobortis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur justo felis, dictum ac erat pharetra, congue consectetur neque. Mauris eleifend placerat ligula, at commodo sem porttitor eget. Sed congue lacus eget turpis iaculis, sollicitudin posuere nunc bibendum. Ut consectetur dapibus risus, vel luctus urna congue a. Aliquam facilisis suscipit neque, ut dapibus arcu molestie eu.</p>
           </section>
-          <section id="five" class="main-section">
-            <header>five</header>
-            <p>five - Another paragraph example</p>
-            <p>five point five - Another paragraph example</p>
-            <p>five point six - Another paragraph example</p>
+          <section id="Python" class="main-section">
+            <header>Python</header>
+            <p>Vestibulum dapibus nisi vel suscipit congue. Curabitur quis elit cursus, convallis orci nec, vulputate nunc. Mauris justo diam, pretium nec odio ac, efficitur fermentum nulla. Nunc et scelerisque enim. Morbi efficitur vestibulum diam vitae placerat. Integer mattis congue libero, vitae gravida lectus molestie et. Donec bibendum hendrerit risus, in feugiat ante tincidunt at. Phasellus dapibus ac nibh non blandit. Phasellus sit amet nulla sollicitudin, luctus arcu vitae, ullamcorper lorem. Nunc ornare metus eget turpis tincidunt, at aliquam nibh molestie. Donec nec elit a lectus tristique fringilla. Pellentesque eu ligula nec diam placerat venenatis ut a nulla. Nam non ex vitae ex vulputate dapibus.</p>
+            <h4>Thank you for Reading</h4>
+            <p>Nunc eu dolor vitae turpis interdum aliquam eu sed felis. Nam eu scelerisque sapien. Vivamus condimentum turpis at libero imperdiet, sed faucibus tellus ullamcorper. Cras neque diam, porta ut tellus sed, volutpat dictum justo. Aenean porttitor mauris sit amet enim bibendum, at varius lectus scelerisque. Pellentesque finibus at quam pellentesque porta. Pellentesque iaculis at eros nec sagittis. Praesent ultrices viverra finibus. Phasellus varius orci felis, in dignissim risus dignissim et. Curabitur fringilla, velit a pellentesque vestibulum, sapien nulla malesuada libero, id mollis nibh lectus id lacus. Vestibulum eu luctus nulla.</p>
+            <p>Nunc eu dolor vitae turpis interdum aliquam eu sed felis. Nam eu scelerisque sapien. Vivamus condimentum turpis at libero imperdiet, sed faucibus tellus ullamcorper. Cras neque diam, porta ut tellus sed, volutpat dictum justo. Aenean porttitor mauris sit amet enim bibendum, at varius lectus scelerisque. Pellentesque finibus at quam pellentesque porta. Pellentesque iaculis at eros nec sagittis. Praesent ultrices viverra finibus. Phasellus varius orci felis, in dignissim risus dignissim et. Curabitur fringilla, velit a pellentesque vestibulum, sapien nulla malesuada libero, id mollis nibh lectus id lacus. Vestibulum eu luctus nulla.</p>
           </section>
         </main>
       </div>
